web-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: web
  namespace: rlcatalyst    #Replace with your namespace
  labels:
    app: web
spec:
  replicas: 1
  selector:
    matchLabels:
      app: web
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: rlcatalyst    #Replace with your namespace
      labels:
        app: web
    spec:
      containers:
        - image: 045938549113.dkr.ecr.us-east-2.amazonaws.com/nginx:latest
          name: web
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: persistent-storage-1
              mountPath: /etc/nginx/conf.d
      restartPolicy: Always
      volumes:
        - name: persistent-storage-1
          configMap:
            name: app-configmap
            items:
              - key: "default.conf"
                path: "default.conf"
