web-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: "web-svc"
  namespace: "rlcatalyst"    #Replace with your namespace
spec:
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
  selector:
    app: "web"
status:
  loadBalancer: {}
