ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: "rg-enterprise"
  namespace: "rlcatalyst"  #Replace with your namespace
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    alb.ingress.kubernetes.io/certificate-arn: #Attach your Certificate Arn
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTPS": 443}]'
  labels:
    app: web
spec:
  rules:
  - http:
      paths:
      - path: /*
        pathType: Prefix
        backend:
          service:
            name: web-svc
            port:
              number: 80
